--- a/TODO.txt
+++ b/TODO.txt
@@ -4,8 +4,17 @@ Sites à scanner :
 - eurolines.fr
 - eurostar.com
 
+Langage de programmation de l'application :
+Java
+
+Serveur d'application :
+tomcat 7
+
 Couleurs de l'application :
 Rouge sur fond vert
 
-Titre de l'application :
-resaspi
+Technologies web :
+- Servlet & JSP
+- Wicket
+-Struts2
+
