--- a/TODO.txt
+++ b/TODO.txt
@@ -13,8 +13,11 @@ tomcat 7
 Couleurs de l'application :
 Rouge sur fond vert
 
+Application lourde
+
 Technologies web :
 - Servlet & JSP
 - Wicket
 -Struts2
 - JSF
+- Technologie Swing
